# hindsight

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CANDIDATES.md  CHANGELOG.md  CLAUDE-CODE-PROMPT.md  CONTRIBUTING.md  DEMO-PLAN.md  EVALS.md  FIRST-4-HOURS.md  LAUNCH.md  Makefile  PLAN.md  README.md  SPIKE.md  TECH-STACK.md  cover-letter-snippet.md  elevator-pitch.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: walkthrough.md
fixtures/: README.md  canonical_bad.jsonl  canonical_latency_div_bad.jsonl  canonical_latency_div_good.jsonl  canonical_llm_content_bad.jsonl  canonical_llm_content_good.jsonl  canonical_token_div_bad.jsonl  canonical_tool_error_bad.jsonl  canonical_tool_error_good.jsonl  langfuse_good.json  langsmith_good.json  otel_good.json  subagent_bench_good.json
prompts/: replay-system.md
runs/: diff_good_vs_bad.json  diff_good_vs_bad.md  stats_good.json  stats_good.md
scripts/: capture_otel_anthropic.py
src/: spike_run.py  test_cli_verbs.py  test_replay.py  test_spike.py  test_web.py
src/hindsight/: __init__.py  base.py  canonical.py  cli.py  diff.py  ingest_jsonl.py  ingest_langfuse.py  ingest_langsmith.py  ingest_otel.py  ingest_subagent_bench.py  replay.py  show.py  stats.py
src/hindsight/web/: __init__.py  app.py  render.py
src/hindsight/web/static/: style.css
src/hindsight/web/templates/: base.html  browse.html  diff_picker.html  diff_result.html  replay_picker.html  show.html
